// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid should render correctly with main content and an side 1`] = `
<DocumentFragment>
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-two-thirds"
    >
      <h1>
        Beacons Service
      </h1>
    </div>
    <div
      class="govuk-grid-column-one-third"
    >
      <h2>
        Register your beacon
      </h2>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Grid should render correctly with main content but without an side 1`] = `
<DocumentFragment>
  <div
    class="govuk-grid-row"
  >
    <div
      class="govuk-grid-column-two-thirds"
    >
      <h1>
        Beacons Service
      </h1>
    </div>
    <div
      class="govuk-grid-column-one-third"
    />
  </div>
</DocumentFragment>
`;
